// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Tracker should render ProgressTracker with background color and opacity 1`] = `
<div
  data-c-alignment="base(centre)"
  data-c-background="black(100)"
  data-c-padding="top(quarter) bottom(quarter)"
>
  <ol
    aria-valuemin={1}
    aria-valuenow={-1}
    aria-valuetext="function () {
        var active = items &&
            items.find(function (_a) {
                var state = _a.state;
                return state === \\"active\\";
            });
        return active ? active.label : \\"\\";
    } : function () {
        var active = items &&
            items.find(function (_a) {
                var state = _a.state;
                return state === \\"active\\";
            });
        return active ? active.title : \\"\\";
    }"
    data-c-container="layout"
    role="progressbar"
    tabIndex={0}
  >
    <ProgressTrackerItem
      label="Step 01"
      state="active"
      title="Job Info"
    />
  </ol>
</div>
`;

exports[`Progress Tracker should render ProgressTracker with children 1`] = `
<div
  data-c-alignment="base(centre)"
  data-c-background="undefined(100)"
  data-c-padding="top(quarter) bottom(quarter)"
>
  <ol
    aria-valuemin={1}
    aria-valuenow={-1}
    aria-valuetext="function () {
        var active = items &&
            items.find(function (_a) {
                var state = _a.state;
                return state === \\"active\\";
            });
        return active ? active.label : \\"\\";
    } : function () {
        var active = items &&
            items.find(function (_a) {
                var state = _a.state;
                return state === \\"active\\";
            });
        return active ? active.title : \\"\\";
    }"
    data-c-container="layout"
    role="progressbar"
    tabIndex={0}
  >
    <ProgressTrackerItem
      label="Step 01"
      state="active"
      title="Job Info"
    />
    <ProgressTrackerItem
      label="Step 02"
      state="complete"
      title="Work Env."
    />
    <ProgressTrackerItem
      label="Step 03"
      state="error"
      title="Impact"
    />
  </ol>
</div>
`;

exports[`Progress Tracker should render ProgressTracker with items 1`] = `
<div
  data-c-alignment="base(centre)"
  data-c-background="undefined(100)"
  data-c-padding="top(quarter) bottom(quarter)"
>
  <ol
    aria-valuemax={3}
    aria-valuemin={1}
    aria-valuenow={1}
    aria-valuetext="function () {
        var active = items &&
            items.find(function (_a) {
                var state = _a.state;
                return state === \\"active\\";
            });
        return active ? active.label : \\"\\";
    } : function () {
        var active = items &&
            items.find(function (_a) {
                var state = _a.state;
                return state === \\"active\\";
            });
        return active ? active.title : \\"\\";
    }"
    data-c-container="layout"
    role="progressbar"
    tabIndex={0}
  >
    <ProgressTrackerItem
      key="Job Info"
      label="Step 01"
      state="active"
      title="Job Info"
    />
    <ProgressTrackerItem
      key="Work Env."
      label="Step 02"
      state="complete"
      title="Work Env."
    />
    <ProgressTrackerItem
      key="Impact"
      label="Step 03"
      state="error"
      title="Impact"
    />
  </ol>
</div>
`;
